Add Collection<>, restructure List, Set to implement it instead of java.util.Collection